--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/bg_rainbow">
 
 
     <ListView
@@ -24,7 +25,8 @@
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/buttonAddItem"
         android:layout_toStartOf="@+id/buttonAddItem"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        />
 
 
 
@@ -36,7 +38,8 @@
         android:onClick="onAddItem"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="#FFFFFF"/>
 
 
 </RelativeLayout>
